--- a/.gitignore
+++ b/.gitignore
@@ -151,6 +151,12 @@ tests/reports
 runs/
 **/runs/
 
+# Trained models
+models/
+**/models/
+*.pth
+*.pt
+
 # Training results and visualizations
 visualizations/
 **/visualizations/
